--- a/css/styles.css
+++ b/css/styles.css
@@ -1,5 +1,22 @@
+
+
+
+
 h1  {
   font-size: 20px;
   font-weight: bold;
-
+}
+body {
+  background-color: yellow;
+}
+.action {
+  margin: 20px;
+  border: 2px solid black;
+  padding: 14px;
+  background-color: grey;
+  text-align: center;
+}
+.phrase {
+  font-size: 30px;
+  font-weight: bold;
 }
