--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ body {
   background-color: grey;
   text-align: center;
 }
-.phrase {
+.enterNumber {
   font-size: 30px;
   font-weight: bold;
 }
